# costco_restock_checker

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  alerts.py  checker.py  config.py  database.py  main.py  models.py  scheduler.py  seed.py  services.py
app/static/: style.css
app/templates/: base.html  index.html  macros.html  product.html
tests/: conftest.py  test_alerts.py  test_app.py  test_browser.py  test_checker.py  test_config.py  test_services.py
